--- a/myrottenpotatoes/Gemfile
+++ b/myrottenpotatoes/Gemfile
@@ -22,6 +22,17 @@ end
 
 gem 'jquery-rails'
 
+# use Halm for templates
+gem 'haml'
+
+# use Ruby debugger
+group :development, :test do
+	gem 'debugger'
+end
+
+
+
+										
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
