--- a/myrottenpotatoes/Gemfile
+++ b/myrottenpotatoes/Gemfile
@@ -7,6 +7,9 @@ gem 'rails', '3.2.16'
 
 gem 'sqlite3'
 
+# authentication process
+gem 'omniauth'
+gem 'omniauth-twitter'
 
 # Gems used only for assets and not required
 # in production environments by default.
